--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "http://www.nju33.work/"
   },
   "bugs": {
-    "url": "https://github.com/totora0155/group-at/issues"
+    "url": "https://github.com/totora0155/group-from/issues"
   },
   "dependencies": {
     "lodash.foreach": "^4.1.0",
@@ -19,13 +19,13 @@
   "devDependencies": {
     "ava": "^0.13.0"
   },
-  "homepage": "https://github.com/totora0155/group-at#readme",
+  "homepage": "https://github.com/totora0155/group-from#readme",
   "keywords": [],
   "license": "MIT",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:totora0155/group-at.git"
+    "url": "git@github.com:totora0155/group-from.git"
   },
   "scripts": {
     "test": "ava"
